--- a/_posts/spring/2023-01-06-Hateoas.md
+++ b/_posts/spring/2023-01-06-Hateoas.md
@@ -2,7 +2,7 @@
 title: "내가 적어보는 Hateoas 정리"
 
 categories:
-  - Spring
+  - spring
 tags:
   - [spring, spring Doc, Hateoas, TICKET-EXPEDITIONARY-FORCE]
 
