--- a/_posts/spring/2023-01-06-DTO.md
+++ b/_posts/spring/2023-01-06-DTO.md
@@ -44,13 +44,13 @@ Id로 구분
 Entity의 속성 값을 건들면 영속성 모델로 표현한 Entity의 순수성이 모호해져서 Controller에서
 쓸 DTO와 Entity 클래스를 분리하는게 좋다.
 
-# DTO를 쓰는 이유
+## DTO를 쓰는 이유
 
 테이블과 매핑되는 Entity 클래스가 변경되면 여러 클래스에 영향을 미치기 때문에
 MVC의 View와 통신하는 DTO 클래스는 자주 변경되므로 분리한다고 한다.
 또한 Entity에서 원하는 데이터만 추려서 View에 전송할 수 있다.
 
-# DTO를 어떻게 사용할 것인가
+## DTO를 어떻게 사용할 것인가
 
 * 어디부터 어디까지 DTO를 사용할 것인가
 
