--- a/_posts/java/livestudy/2023-01-06-live-study6.md
+++ b/_posts/java/livestudy/2023-01-06-live-study6.md
@@ -47,7 +47,7 @@ last_modified_at: 2023-01-06
 
 자바에서는 모든 상속계층도의 최상위에 Object 클래스가 위치한다. 따라서 Object 클래스에 정의된 멤버들을 사용할 수 있다.
 
-# 2. super 키워드
+## 2. super 키워드
 
 ---
 
@@ -75,7 +75,7 @@ ex) super.getName();
 
 
 
-# 3. 메소드 오버라이딩
+## 3. 메소드 오버라이딩
 
 ---
 
@@ -95,7 +95,7 @@ ex) super.getName();
 
 (static 같은 경우는 오버라이딩이 아니라 그냥 static 메서드를 정의 한 것이다. )
 
-# 4. 다이나믹 메소드 디스패치
+## 4. 다이나믹 메소드 디스패치
 
 ---
 
@@ -109,7 +109,7 @@ ex) super.getName();
 
 인터페이스를 참조한 2개의 자식 클래스가 있고, 이에 인터페이스를 생성하여 그 안의 함수를 실행시켰을 때, 과연 2개의 자식 클래스 중 누가 호출되는 것인 지를 컴파일러가 알 수 없는 것이다.  
 
-# 5. 추상 클래스
+## 5. 추상 클래스
 
 ---
 
@@ -136,7 +136,7 @@ abstract class Player{
 }
 ```
 
-# 6. final 키워드
+## 6. final 키워드
 
 ---
 
@@ -148,7 +148,7 @@ final 사용 구간은 클래스, 메서드, 멤버변수, 지역변수 이다.
 
 final이 붙은 변수는 상수이므로 선언과 초기화를 동시에 하지만, 인스턴스 변수의 경우 생성자에서 초기화 되도록 할 수 있다. 클래스 내에 매개변수를 갖는 생성자를 선언하여, 인스턴스를 생성할 때 final이 붙은 멤버변수를 초기화하는데 필요한 값을 생성자의 매개변수로부터 제공받는 것이다. 이를 통해 각 인스턴스마다 final이 붙은 멤버변수가 다른 값을 갖도록 하는 것이 가능하다. 이것이 불가능 하다면 final이 붙은 인스턴스 변수는 모든 인스턴스에서 같은 값이 되어야만 한다.
 
-# 7. Object 클래스
+## 7. Object 클래스
 
 ---
 
