--- a/_posts/spring/2023-01-06-Hateoas.md
+++ b/_posts/spring/2023-01-06-Hateoas.md
@@ -131,7 +131,7 @@ Hateoas 적용
 이렇게 전송되어 보내면 요청에 대한 URL을 던질 때 동적으로 처리할 수 있어 이후에 URL 정보가 변경되더라도 클라는 일일히 가서 수정할 필요가 없다. (허나 예제에선 그 장점이 두각되진 않았다ㅠ)
 
 
-# hateoas를 dto 안에 넣을 수 있을 까
+## hateoas를 dto 안에 넣을 수 있을 까
 
 여기서 우리는 ApiResponseDto 안의 data 라는 제네릭 타입에 집어넣은 상태에서 application/hal+json을 유지할 수 있냐이다.
 
